68526 update payments on mobile, fix login on checkout

--- a/Snowdog_Components/components/Templates/checkout/modules/Snowdog_Blank/base/components/_extends.scss
+++ b/Snowdog_Components/components/Templates/checkout/modules/Snowdog_Blank/base/components/_extends.scss
@@ -853,7 +853,9 @@
         width: calc(100% - (21px + #{$indent__s} + #{$indent__xs}));
 
         &.cvv {
-            width: auto;
+            width: 70px;
+            padding: 0 $spacer;
+            text-align: center;
         }
     }
 }
